lib/04data_structure/stack/stack.h

typedef struct Stack Stack;
struct Stack {
	Deque data;
};
void stack_drop(void *self);
IMPL_SHY_OWNED_RESULT(Stack, stack_drop, stack_clone_obj)

ResultStack stack_new(TypeDesc elem);
i32 stack_reserve(Stack *stack, usize additional);
i32 stack_push_raw(Stack *stack, const void *value);
i32 stack_pop(Stack *stack, void *out);
const void *stack_peek(const Stack *stack);
void *stack_peek_mut(Stack *stack);
void stack_clear(Stack *stack);