lib/04data_structure/stack/lib.rs

//generated by gpt-5<noreply@openai.com> @ codex
#![no_std]

use core::ffi::c_void;
use core::marker::PhantomData;
use core::mem::{align_of, size_of, ManuallyDrop, MaybeUninit};
use core::ptr;
use shyos_deque::RawDeque;
use shyos_obj::TypeDesc;
use shyos_result::{CResult, ERROR_INVALID_ARGUMENT, ERROR_NO_VALUE, ERROR_OUT_OF_MEMORY};

#[repr(C)]
pub struct RawStack {
    pub data: RawDeque,
}

unsafe extern "C" {
    #[link_name = "stack_new"]
    fn c_stack_new(elem: TypeDesc) -> CResult<RawStack>;
    #[link_name = "stack_reserve"]
    fn c_stack_reserve(stack: *mut RawStack, additional: usize) -> i32;
    #[link_name = "stack_push_raw"]
    fn c_stack_push_raw(stack: *mut RawStack, value: *const c_void) -> i32;
    #[link_name = "stack_pop"]
    fn c_stack_pop(stack: *mut RawStack, out: *mut c_void) -> i32;
    #[link_name = "stack_peek"]
    fn c_stack_peek(stack: *const RawStack) -> *const c_void;
    #[link_name = "stack_peek_mut"]
    fn c_stack_peek_mut(stack: *mut RawStack) -> *mut c_void;
    #[link_name = "stack_clear"]
    fn c_stack_clear(stack: *mut RawStack);
    #[link_name = "stack_drop"]
    fn c_stack_drop(stack: *mut RawStack);
}

unsafe extern "C" fn drop_element<T>(value: *mut c_void) {
    unsafe { ptr::drop_in_place(value.cast::<T>()) }
}

fn type_desc<T>() -> TypeDesc {
    TypeDesc {
        size: size_of::<T>(),
        drop: Some(drop_element::<T>),
        clone: None,
    }
}

#[repr(transparent)]
pub struct CStack<T> {
    raw: RawStack,
    marker: PhantomData<T>,
}

unsafe impl<T: Send> Send for CStack<T> {}
unsafe impl<T: Sync> Sync for CStack<T> {}

impl<T> CStack<T> {
    pub fn new() -> CResult<Self> {
        if size_of::<T>() == 0 || align_of::<T>() > align_of::<usize>() {
            return CResult::err(ERROR_INVALID_ARGUMENT);
        }
        match unsafe { c_stack_new(type_desc::<T>()) } {
            CResult::Ok(raw) => CResult::ok(Self {
                raw,
                marker: PhantomData,
            }),
            CResult::Err(error) => CResult::err(error),
        }
    }

    pub fn with_capacity(capacity: usize) -> CResult<Self> {
        let mut stack = match Self::new() {
            CResult::Ok(stack) => stack,
            CResult::Err(error) => return CResult::err(error),
        };
        if let CResult::Err(error) = stack.reserve(capacity) {
            return CResult::err(error);
        }
        CResult::ok(stack)
    }

    pub fn len(&self) -> usize {
        self.raw.data.len
    }

    pub fn capacity(&self) -> usize {
        self.raw.data.cap
    }

    pub fn is_empty(&self) -> bool {
        self.len() == 0
    }

    pub fn reserve(&mut self, additional: usize) -> CResult<()> {
        if unsafe { c_stack_reserve(&mut self.raw, additional) } == 0 {
            CResult::ok(())
        } else {
            CResult::err(ERROR_OUT_OF_MEMORY)
        }
    }

    pub fn push(&mut self, value: T) -> CResult<()> {
        let value = ManuallyDrop::new(value);
        if unsafe { c_stack_push_raw(&mut self.raw, (&*value as *const T).cast::<c_void>()) } == 0 {
            CResult::ok(())
        } else {
            drop(ManuallyDrop::into_inner(value));
            CResult::err(ERROR_OUT_OF_MEMORY)
        }
    }

    pub fn pop(&mut self) -> CResult<T> {
        let mut value = MaybeUninit::<T>::uninit();
        if unsafe { c_stack_pop(&mut self.raw, value.as_mut_ptr().cast()) } == 0 {
            CResult::ok(unsafe { value.assume_init() })
        } else {
            CResult::err(ERROR_NO_VALUE)
        }
    }

    pub fn peek(&self) -> Option<&T> {
        unsafe { c_stack_peek(&self.raw).cast::<T>().as_ref() }
    }

    pub fn peek_mut(&mut self) -> Option<&mut T> {
        unsafe { c_stack_peek_mut(&mut self.raw).cast::<T>().as_mut() }
    }

    pub fn clear(&mut self) {
        unsafe { c_stack_clear(&mut self.raw) }
    }
}

impl<T: Clone> Clone for CStack<T> {
    fn clone(&self) -> Self {
        let mut clone = Self::with_capacity(self.len()).unwrap();
        for index in 0..self.len() {
            let value = unsafe {
                shyos_deque::deque_get_raw(&self.raw.data, index)
                    .cast::<T>()
                    .as_ref()
                    .unwrap()
            };
            clone.push(value.clone()).unwrap();
        }
        clone
    }
}

impl<T> Drop for CStack<T> {
    fn drop(&mut self) {
        unsafe { c_stack_drop(&mut self.raw) }
    }
}
